# malw

./: .gitignore  DOCS.md  README.md  pyproject.toml
malw/: compare.py  filetypes.py  hashes.py  malw.py  pe_info.py  strings.py  userdb.txt  utils.py
tests/: conftest.py  test_compare.py  test_filetypes.py  test_hashes.py  test_malw.py  test_pe_info.py  test_strings.py  test_utils.py
tests/files/: pe_source.c  pe_source_similar.c
